--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,45 @@
 </head>
 
 <body>
+
+    <body>
+        <h1>Monaco Editor in Electron!</h1>
+        <div id="container" style="width:500px;height:300px;border:1px solid #ccc"></div>
+      </body>
+    
+      <script>
+      (function() {
+        const path = require('path');
+        const amdLoader = require('../node_modules/monaco-editor/min/vs/loader.js');
+        const amdRequire = amdLoader.require;
+        const amdDefine = amdLoader.require.define;
+        function uriFromPath(_path) {
+          var pathName = path.resolve(_path).replace(/\\/g, '/');
+          if (pathName.length > 0 && pathName.charAt(0) !== '/') {
+            pathName = '/' + pathName;
+          }
+          return encodeURI('file://' + pathName);
+        }
+        amdRequire.config({
+          baseUrl: uriFromPath(path.join(__dirname, '../node_modules/monaco-editor/min'))
+        });
+        // workaround monaco-css not understanding the environment
+        self.module = undefined;
+        amdRequire(['vs/editor/editor.main'], function() {
+          var editor = monaco.editor.create(document.getElementById('container'), {
+            value: [
+              'function x() {',
+              '\tconsole.log("Hello world!");',
+              '}'
+            ].join('\n'),
+            language: 'javascript'
+          });
+        });
+      })();
+      </script>
+
+
+
   <div class="container">
     <div class="row mt-5">
       <div class="col-md-4 offset-md-1">
@@ -18,6 +57,5 @@
       </div>
     </div>
   </div>
-</body>
 
 </html>
