accesing the fs

--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- script link https://ourcodeworld.com/articles/read/106/how-to-choose-read-save-delete-or-create-a-file-with-electron-framework -->
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
+  <title>RN IDE</title>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>React App</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
+  <!--We load this script here to allow the readFolder method to appear to the DOM...We also load the same script at the bottom, to let the script include the DOM it its execution, once the DOM loads. I haven't found a better solution for this problem, but now, eliminating one of the loading statements is causing problems for the app Bear with me.-->
+  <script src="./renderer/renderer.js"></script>
 </head>
 
 <body>
@@ -28,9 +21,47 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  <input type="file">
-  </div>
+  <div class="shortcut" onclick="readFolder('/');">
+    <i class="fa fa-anchor" aria-hidden="true"></i> Root</div>
+  <div class="shortcut" onclick="readFolder('/Users/Salman/Desktop/')">
+    <i class="fa fa-users" aria-hidden="true"></i> Users</div>
+  <div id="listed-files"></div>
 
+  <div id="display-files"></div>
+
+  <input type="button" id="btn-updatefile" value="update file" onclick="userFile('')" />
+
+
+  <!-- <script>
+    const path = require('path')
+    require(path.resolve(" ./public/renderer/renderer.js "))
+  </script> -->
+
+
+  <!-- <script>
+
+    const { dialog } = require("electron ").remote;
+
+    document.getElementById("btn-updatefile ").addEventListener("click ", () => {
+      let newContent = 'this is the new content of an existent file 123245';
+      //display the open file dialog to select a file
+      //using the writefile method of the filesystem you can replace the content of an existing file
+      dialog.showOpenDialog((fileNames) => {
+        if (fileNames === undefined) {
+          console.log('No file selected');
+          return;
+        }
+        fs.writeFile(fileNames[0], newContent, (err, data) => {
+          if (err) {
+            console.log('cannot update file', err);
+            return;
+          }
+          alert('the file has been updated');
+        })
+      })
+    }, false);
+  </script> -->
 </body>
+
 
 </html>
