--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <body>
     <h1>Whatup World!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
+    
+    <!-- We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    and Electron <script>document.write(process.versions.electron)</script>. -->
+
+      <div id='root'> Not rendered. </div>
 
     <script>
       // You can also require other files to run in this process
