--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
    crossorigin="anonymous">
    
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> <!-- Material-UI Font imported -->
-   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Material-UI Icons imported -->
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Material-UI Icons imported -->
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
 
-	<script src="../public/renderer/renderer.js"></script>
-	<script src="../main.js"></script>
+	<!-- <script src="../public/renderer/renderer.js"></script> -->
+	<script src="./main.js"></script>
 
 </head>
 
 <body>
 	<div id="root"> Not rendered. </div>
-	<script src="../dist/app.bundle.js"></script>
+	<script src="./dist/app.bundle.js"></script>
 </body>
 
 
